--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -1,5 +1,9 @@
+{% load static %}
+
 <!doctype html>
 <html lang="ko">
+
+
 
 <head>
 	<meta charset="utf-8">
@@ -10,24 +14,14 @@
 	<title>Signin Template · Bootstrap</title>
 
 	<link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/sign-in/">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
 
 	<!-- Bootstrap core CSS -->
 	<link href="https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png"
-		sizes="180x180">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32"
-		type="image/png">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16"
-		type="image/png">
-	<link rel="manifest" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/manifest.json">
-	<link rel="mask-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
-		color="#563d7c">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon.ico">
-	<meta name="msapplication-config" content="https://getbootstrap.com/docs/4.4/assets/img/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#563d7c">
+	
 
 
 	<style>
@@ -53,8 +47,7 @@
 <body class="text-center">
 	<form class="form-signin" action="{% url 'accounts:login' %}" method='POST'>
 		{% csrf_token %}
-		<img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72"
-			height="72">
+		<img class="mb-4" src="{% static "images/jackpot.png" %}" alt="" style="width:100px; height:100px;">
 		<h1 class="h3 mb-3 font-weight-normal">로그인</h1>
 		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus
 			name='username'>
