--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+
+
 <!doctype html>
 <html lang="ko">
 
@@ -7,27 +11,16 @@
 	<meta name="description" content="">
 	<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 	<meta name="generator" content="Jekyll v3.8.6">
-
-	<title>Signin Template · Bootstrap</title>
+	
+	<title>Signup</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
 
 	<link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/sign-in/">
 	<!-- Bootstrap core CSS -->
 	<link href="https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+	
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png"
-		sizes="180x180">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32"
-		type="image/png">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16"
-		type="image/png">
-	<link rel="manifest" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/manifest.json">
-	<link rel="mask-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
-		color="#563d7c">
-	<link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon.ico">
-	<meta name="msapplication-config" content="https://getbootstrap.com/docs/4.4/assets/img/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#563d7c">
 
 	<style>
 		.bd-placeholder-img {
@@ -52,9 +45,8 @@
 <body class="text-center">
 	<form action="{% url "accounts:signup" %}" class="form-signin" method='POST'>
 		{% csrf_token %}
-		<img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72"
-			height="72">
-		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+		<img class="mb-4" src="{% static "images/jackpot.png" %}" alt="" style="width:100px; height:100px;">
+		<h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 		<label for="inputEmail" class="sr-only">Email address</label>
 		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus
 			name="username">
