--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@8.19.0/dist/sweetalert2.css">
 	<link rel="stylesheet" href="{% static 'css/base.css' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
+	
 	
 	{% block style %}
 	{% endblock style %}
@@ -33,7 +35,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
 	<!-- Optional: include a polyfill for ES6 Promises for IE11 -->
-	<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
 	
 	{% block script %}
 	{% endblock script %}
