--- a/static/css/base.css
+++ b/static/css/base.css
@@ -255,15 +255,15 @@ p {
 */
 .neon {
 	color: #FB4264;
-	font-size: 12vw;
-	line-height: 8vw;
+	font-size: 10vw;
+	line-height: 6vw;
 	text-shadow: 0 0 3vw #F40A35;
 }
 
 .flux {
 	color: #426DFB;
-	font-size: 12vw;
-	line-height: 8vw;
+	font-size: 10vw;
+	line-height: 6vw;
 	text-shadow: 0 0 3vw #2356FF;
 }
 
@@ -329,4 +329,12 @@ p {
 	-webkit-animation-iteration-count: infinite;
 	-webkit-animation-timing-function: ease-in-out;
 	-webkit-animation-direction: alternate;
+}
+
+.dot {
+	height: 25px;
+	width: 25px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
 }
