Edit ball class to lotto-ball in base.css

--- a/lotto/static/css/base.css
+++ b/lotto/static/css/base.css
@@ -331,7 +331,7 @@ p {
 	-webkit-animation-direction: alternate;
 }
 
-.ball {
+.lotto-ball {
 	display: inline-block;
 	width: 10vw;
 	height: 10vw;
