--- a/static/css/base.css
+++ b/static/css/base.css
@@ -331,7 +331,7 @@ p {
 	-webkit-animation-direction: alternate;
 }
 
-.ball {
+.lotto-ball {
 	display: inline-block;
 	width: 10vw;
 	height: 10vw;
